--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,17 @@
 @font-face { font-family: Helvetica; src: url('font/Helvetica.ttf'); } 
 
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url(../img/Preloader_71.gif) center no-repeat #fff;
+}
+
 body {
   background-image: url(../img/background.jpg);
   background-position: center center;
